[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-graphql = { version = "7.0.6", features = ["tokio-sync"] }
async-graphql-poem = "7.0.6"
log = "0.4.22"
poem = "3.0.1"
env_logger = "0.11.3"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
